[flake8]
max-line-length = 90
ignore=F401,F403,F405
import-order-style=smarkets
exclude=setup.py
application-import-names=semaphore
strictness=short
docstring_style=sphinx

[metadata]
license_files = LICENSE.txt

[mypy]
ignore_missing_imports = False
warn_unreachable = True
no_implicit_optional = True
check_untyped_defs = True
disallow_any_generics = False
disallow_incomplete_defs = False
disallow_untyped_calls = True
disallow_untyped_defs = False
show_error_codes = True
show_error_context = True
